# macbook_battery

./: .gitignore  README.md  install.sh  package-lock.json  uninstall.sh
docs/: STATE.md
plists/: com.user.battery-schedule.day.0630.plist  com.user.battery-schedule.day.0900.plist  com.user.battery-schedule.day.1500.plist  com.user.battery-schedule.hold-loop.plist  com.user.battery-schedule.noon.1200.plist  com.user.battery-schedule.noon.1800.plist  com.user.battery-schedule.sync.plist  com.user.clamshell-power-guard.plist  com.user.pmset-ac-watchdog.plist
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  styles.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: commands.rs  lib.rs  main.rs
ui/src/components/: BatteryIcon.tsx  DashboardPage.tsx  ModeBadge.tsx  ModeSwitcher.tsx  PowerGuardPage.tsx  PowerGuardPanel.tsx  ScheduleEditor.tsx  SchedulePage.tsx  Sidebar.tsx  StatusCard.tsx  ThresholdSlider.tsx
ui/src/lib/: api.ts  theme.ts
ui/tests/: DashboardPage.test.tsx  ModeSwitcher.test.tsx  PowerGuardPanel.test.tsx  ScheduleEditor.test.tsx  SchedulePage.test.tsx  StatusCard.test.tsx  ThresholdSlider.test.tsx  api-contract.test.ts  setup.ts
